--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin-left: auto;
   margin-right: auto;
@@ -5,13 +9,87 @@ body {
   text-align: center;
   font-size: 15px;
   font-family: "Poppins", sans-serif;
+  background-color: #fafafa;
 }
 
+header {
+  padding-top: 6rem;
+}
+header h2 {
+  font-size: 2.35rem;
+  letter-spacing: 1px;
+  margin: 0;
+  color: #4c4e61;
+  height: 50px;
+}
+header h2:first-child {
+  font-weight: 200;
+}
+header.sub-heading {
+  color: #4c4e61;
+}
+header h3 {
+  color: #a3a5ae;
+  font-weight: 200;
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+main {
+  padding-top: 4rem;
+  display: flex;
+  justify-content: center;
+}
+main article {
+  margin: 0 1rem;
+  position: relative;
+  width: 23.333rem;
+  height: 16.666rem;
+  padding: 2rem;
+  text-align: left;
+  border-radius: 5px;
+  background-color: white;
+  box-shadow: 5px 3px 30px #a3a5ae;
+}
+main article h1 {
+  color: #4c4e61;
+  margin: 0;
+}
+main article p {
+  padding-top: 0.5rem;
+  color: #a3a5ae;
+  line-height: 1.6rem;
+  margin: 0;
+}
+main article img {
+  position: absolute;
+  bottom: 2rem;
+  right: 2rem;
+}
+main .card-1-cyan {
+  border-top: 4px solid #45d3d3;
+  align-self: center;
+}
+main .card-2-red {
+  border-top: 4px solid #ea5353;
+}
+main .card-3-orange {
+  border-top: 4px solid #fcaf4a;
+  margin-top: 2rem;
+}
+main .card-4-blue {
+  border-top: 4px solid #549ef2;
+  align-self: center;
+}
+
+footer {
+  margin-top: 4rem;
+}
 footer.attribution {
   font-size: 11px;
   text-align: center;
 }
-
 footer.attribution a {
   color: #3e52a3;
 }
