--- a/styles/index.css
+++ b/styles/index.css
@@ -5,7 +5,6 @@
 body {
   margin-left: auto;
   margin-right: auto;
-  width: 1440px;
   text-align: center;
   font-size: 15px;
   font-family: "Poppins", sans-serif;
@@ -48,7 +47,7 @@ main article {
   height: 16.666rem;
   padding: 2rem;
   text-align: left;
-  border-radius: 5px;
+  border-radius: 10px;
   background-color: white;
   box-shadow: 5px 3px 30px #a3a5ae;
 }
@@ -92,6 +91,54 @@ footer.attribution {
 }
 footer.attribution a {
   color: #3e52a3;
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  body {
+    width: 375px;
+    padding: 0 1rem;
+  }
+
+  header {
+    padding-top: 5rem;
+  }
+  header h2 {
+    font-size: 1.5rem;
+  }
+  header h3 {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 1rem;
+    font-weight: 400;
+  }
+
+  main {
+    flex-direction: column;
+    padding-top: 3.5rem;
+  }
+  main article {
+    margin: 0;
+    position: relative;
+    width: 20rem;
+    margin-top: 2rem;
+  }
+  main .two-card-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  main .card-1-cyan {
+    margin-top: 0;
+  }
+
+  footer {
+    max-width: 250px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
