--- a/styles/index.scss
+++ b/styles/index.scss
@@ -7,8 +7,10 @@ $darkBlue: hsl(234, 12%, 34%);
 $lightGray: hsl(0, 0%, 98%);
 $grayBlue: hsl(229, 6%, 66%);
 
+//font
 $poppinsFont: "Poppins", sans-serif;
 
+//base styling
 * {
   box-sizing: border-box;
 }
@@ -16,7 +18,6 @@ $poppinsFont: "Poppins", sans-serif;
 body {
   margin-left: auto;
   margin-right: auto;
-  width: 1440px;
   text-align: center;
   font-size: 15px;
   font-family: $poppinsFont;
@@ -65,7 +66,7 @@ main {
     height: 16.666rem;
     padding: 2rem;
     text-align: left;
-    border-radius: 5px;
+    border-radius: 10px;
     background-color: white;
     box-shadow: 5px 3px 30px $grayBlue;
   }
@@ -84,7 +85,6 @@ main {
 
   & article img {
     position: absolute;
-    //float: right;
     bottom: 2rem;
     right: 2rem;
   }
@@ -120,5 +120,58 @@ footer {
 
   &.attribution a {
     color: hsl(228, 45%, 44%);
+  }
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  body {
+    width: 375px;
+    padding: 0 1rem;
+  }
+
+  header {
+    padding-top: 5rem;
+
+    & h2 {
+      font-size: 1.5rem;
+    }
+
+    & h3 {
+      width: 100%;
+      margin-left: auto;
+      margin-right: auto;
+      font-size: 1rem;
+      font-weight: 400;
+    }
+  }
+
+  main {
+    flex-direction: column;
+    padding-top: 3.5rem;
+
+    & article {
+      margin: 0;
+      position: relative;
+      width: 20rem;
+      margin-top: 2rem;
+    }
+
+    & .two-card-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    & .card-1-cyan {
+      margin-top: 0;
+    }
+  }
+
+  footer {
+    max-width: 250px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
